--- a/matamazom_project-v.4-22.11+/CMakeLists.txt
+++ b/matamazom_project-v.4-22.11+/CMakeLists.txt
@@ -13,5 +13,5 @@ add_executable(self_test3 main_test3.c amount_set.c order.c product.c order.c ma
 target_link_libraries(self_test3 libmtm.a)
 
 
-add_executable(self_test4 main_test4.c libmtm/set.h product.h product.c)
+add_executable(self_test4 main_test4.c libmtm/set.h order.h order.c product.h product.c matamazom.h matamazom.c matamazom_print.h matamazom_print.c)
 target_link_libraries(self_test4 libmtm.a)
